<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uni.ruse.holo3d.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_bg"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dp"
        android:text="@string/how_bg"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dp"
        android:text="@string/step_1_bg"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="10dp"
        android:text="@string/step_2_bg"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="15dp"
        android:text="@string/step_3_bg"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="10dp"
        android:text="@string/step_4_bg"
        android:textSize="13sp" />

    <Button
        android:id="@+id/object"
        android:layout_width="145sp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/textView1"
        android:drawableLeft="@drawable/object" 
        android:drawableStart="@drawable/object"
        android:text="@string/object_bg" />

    <Button
        android:id="@+id/gallery"
        android:layout_width="145sp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tr_pyramid"
        android:layout_alignRight="@+id/tr_pyramid"
        android:layout_alignTop="@+id/object"
        android:drawableLeft="@drawable/gallery"
        android:drawableStart="@drawable/gallery"
        android:text="@string/gallery_bg" />

    <Button
        android:id="@+id/tr_pyramid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/object"
        android:layout_alignLeft="@+id/object"
        android:layout_alignStart="@+id/object"
        android:text="@string/tr_pyramid_bg" />

</RelativeLayout>