<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/black"
    android:orientation="vertical" >
    
 <Button
        android:id="@+id/cube"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/cube"
        android:drawablePadding="-15sp"
        android:drawableStart="@drawable/cube"
        android:text="@string/cube_bg" />

    <Button
        android:id="@+id/cone"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/cone"
        android:drawablePadding="-15sp"
        android:drawableStart="@drawable/cone"
        android:text="@string/cone_bg" />

    <Button
        android:id="@+id/cylinder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/cylinder"
        android:drawablePadding="-15sp"
        android:drawableStart="@drawable/cylinder"
        android:text="@string/cylinder_bg" />

    <Button
        android:id="@+id/pyramid"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/pyramid"
        android:drawablePadding="-15sp"
        android:drawableStart="@drawable/pyramid"
        android:text="@string/pyramid_bg" />

    <Button
        android:id="@+id/sphere"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:drawableLeft="@drawable/sphere"
        android:drawablePadding="-15sp"
        android:drawableStart="@drawable/sphere"
        android:text="@string/sphere_bg" />
    
</LinearLayout>
